--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,7 @@
     line-height: 1.5;
     font-weight: 400;
 
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-
+    color-scheme: light;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -25,6 +22,7 @@
 
 html, body {
     height: 100%;
+    background-color: hsl(0,0%,94%);
 }
 
 body {
@@ -43,11 +41,11 @@ body {
         --card-foreground: 0 0% 3.9%;
         --popover: 0 0% 100%;
         --popover-foreground: 0 0% 3.9%;
-        --primary: 0 0% 9%;
+        --primary: 220 80% 42%;
         --primary-foreground: 0 0% 98%;
         --secondary: 0 0% 96.1%;
         --secondary-foreground: 0 0% 9%;
-        --muted: 0 0% 96.1%;
+        --muted: 0 0% 90.1%;
         --muted-foreground: 0 0% 45.1%;
         --accent: 0 0% 96.1%;
         --accent-foreground: 0 0% 9%;
@@ -71,7 +69,7 @@ body {
         --card-foreground: 0 0% 98%;
         --popover: 0 0% 3.9%;
         --popover-foreground: 0 0% 98%;
-        --primary: 0 0% 98%;
+        --primary: 220 80% 42%;
         --primary-foreground: 0 0% 9%;
         --secondary: 0 0% 14.9%;
         --secondary-foreground: 0 0% 98%;
@@ -134,6 +132,32 @@ body {
 
     .animate-flip {
         animation: flip 0.3s ease-in-out;
+    }
+
+    @keyframes swipe-left {
+        0% {
+            transform: translateX(0%);
+        }
+        100% {
+            transform: translateX(-100%);
+        }
+    }
+
+    @keyframes swipe-right {
+        0% {
+            transform: translateX(0%);
+        }
+        100% {
+            transform: translateX(100%);
+        }
+    }
+
+    .animate-swipe-left {
+        animation: swipe-left 0.3s ease-in-out;
+    }
+
+    .animate-swipe-right {
+        animation: swipe-right 0.3s ease-in-out;
     }
 }
 
