--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -22,7 +23,7 @@
 
 html, body {
     height: 100%;
-    background-color: hsl(0,0%,94%);
+    background-color: hsl(0,0%,95%);
 }
 
 body {
@@ -31,7 +32,6 @@ body {
     place-items: center;
     min-width: 320px;
 }
-
 
 @layer base {
     :root {
@@ -53,7 +53,7 @@ body {
         --destructive-foreground: 0 0% 98%;
         --border: 0 0% 89.8%;
         --input: 0 0% 89.8%;
-        --ring: 0 0% 3.9%;
+        --ring: var(--primary);
         --chart-1: 12 76% 61%;
         --chart-2: 173 58% 39%;
         --chart-3: 197 37% 24%;
@@ -88,16 +88,12 @@ body {
         --chart-4: 280 65% 60%;
         --chart-5: 340 75% 55%;
     }
-}
 
-@layer base {
     * {
         @apply border-border;
     }
 
-    body {
-        @apply bg-background text-foreground;
-    }
+
 }
 
 
@@ -161,3 +157,7 @@ body {
     }
 }
 
+
+a {
+    @apply outline-none ring-ring ring-offset-4 focus:ring-2 rounded-sm
+}
